--- a/api/pom.xml
+++ b/api/pom.xml
@@ -27,4 +27,22 @@
       <artifactId>quarkus-arc</artifactId>
     </dependency>
   </dependencies>
+
+<!--  <build>-->
+<!--    <plugins>-->
+<!--      <plugin>-->
+<!--        <groupId>io.smallrye</groupId>-->
+<!--        <artifactId>jandex-maven-plugin</artifactId>-->
+<!--        <version>3.3.1</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>make-index</id>-->
+<!--            <goals>-->
+<!--              <goal>jandex</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
+<!--    </plugins>-->
+<!--  </build>-->
 </project>
